--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,14 +3,24 @@ name: On Push Workflow
 on:
   push:
     branches:
-      - "**"
+      - "main"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - name: Setup Go 1.19
+        uses: actions/setup-go@v3
         with:
           go-version: "^1.19.4"
-      - run: go build
+      - name: Build
+        run: go build
+      - name: Get current date
+        id: date
+        run: echo "name=date::$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./gorrola
+          tag_name: ${{ steps.date.outputs.date }}
